[package]
name    = "ksynth"
version = "0.0.0"
edition = "2018"

authors = ["Will <will@kentik.com>"]
license = "GPL-2.0"

[features]
default = ["script"]
script  = ["v8", "v8vm"]

[dependencies]
base64        = "0.13.0"
bytes         = "1.2.1"
capnp         = "0.14.9"
chrono        = "0.4.22"
futures       = "0.3.24"
hex           = "0.4.3"
http          = "0.2.8"
itoa          = "1.0.3"
libc          = "0.2.132"
log           = "0.4.17"
netdiag       = "0.3.0"
nix           = "0.23.1"
parking_lot   = "0.12.1"
rand          = "0.8.5"
ryu           = "1.0.11"
sha2          = "0.10.3"
serde_json    = "1.0.85"
serde_yaml    = "0.8.26"
signal-hook   = "0.3.14"
tokio-rustls  = "0.23.4"
webpki        = "0.22.0"
webpki-roots  = "0.22.4"
yaml-rust     = "0.3.5"

[dependencies.anyhow]
version  = "1.0.63"
features = ["backtrace"]

[dependencies.clap]
version  = "2.34.0"
features = ["yaml"]

[dependencies.ed25519-compact]
version  = "1.0.11"
features = []

[dependencies.hyper]
version  = "0.14.20"
features = ["client"]

[dependencies.hyper-rustls]
version  = "0.23.0"
features = ["http1", "http2"]

[dependencies.opentelemetry]
version  = "0.17.0"
features = ["rt-tokio"]

[dependencies.opentelemetry-otlp]
version  = "0.10.0"
features = ["http-proto", "reqwest-client", "reqwest-rustls"]
default-features = false

[dependencies.opentelemetry-semantic-conventions]
version  = "0.9.0"
features = []

[dependencies.rustls]
version  = "0.20.6"
features = ["dangerous_configuration"]

[dependencies.rustls-native-certs]
version  = "0.6.2"
features = []

[dependencies.serde]
version  = "1.0.144"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "1.20.1"
features = ["macros", "net", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-util]
version  = "0.7.3"
features = ["codec"]

[dependencies.tracing]
version  = "0.1.36"
features = []

[dependencies.tracing-opentelemetry]
version  = "0.17.4"
features = []

[dependencies.tracing-subscriber]
version  = "0.3.15"
features = ["env-filter", "tracing-log"]

[dependencies.trust-dns-client]
version  = "0.21.2"
features = []
default-features = false

[dependencies.trust-dns-resolver]
version  = "0.21.2"
features = ["system-config", "tokio-runtime"]
default-features = false

[dependencies.v8]
version  = "0.49.0"
optional = true

[dependencies.x509-certificate]
version  = "0.13.0"
features = []

[dependencies.notary]
version  = "0.0.5"
features = ["client"]
default-features = false

[dependencies.synapi]
path     = "synapi"

[dependencies.v8vm]
git      = "https://github.com/kentik/v8vm.git"
rev      = "a7811d4474820c5a4e5da3e8f165a31038491a31"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
capo   = "0.0.1"
procfs = "0.14.1"

[dev-dependencies]
rcgen       = "0.9.3"
tokio-test  = "0.4.2"

[dev-dependencies.hyper]
version  = "0.14.20"
features = ["server"]

[dev-dependencies.rustls-pemfile]
version  = "1.0.1"
features = []

[build-dependencies]
capnpc = "0.14.9"
anyhow = "1.0.63"

[build-dependencies.git2]
version  = "0.15.0"
features = []
default-features = false

[profile.release]
debug = true

[profile.release.package."*"]
debug = false
