[package]
name    = "ksynth"
version = "0.0.0"
edition = "2018"

authors = ["Will <will@kentik.com>"]
license = "GPL-2.0"

[features]
experimental = []

[dependencies]
base64        = "0.13.0"
bytes         = "1.1.0"
capnp         = "0.14.11"
chrono        = "0.4.19"
futures       = "0.3.21"
hex           = "0.4.3"
http          = "0.2.7"
itoa          = "1.0.1"
libc          = "0.2.125"
log           = "0.4.17"
netdiag       = "0.3.0"
nix           = "0.23.1"
parking_lot   = "0.12.0"
rand          = "0.8.5"
ryu           = "1.0.9"
sha2          = "0.10.2"
serde_json    = "1.0.80"
serde_yaml    = "0.8.21"
signal-hook   = "0.3.13"
tokio-rustls  = "0.23.3"
webpki        = "0.22.0"
webpki-roots  = "0.22.3"
yaml-rust     = "0.3.5"

[target.'cfg(target_os = "linux")'.dependencies]
capo          = "0.0.1"
procfs        = "0.12.0"

[dependencies.anyhow]
version  = "1.0.57"
features = ["backtrace"]

[dependencies.clap]
version  = "2.34.0"
features = ["yaml"]

[dependencies.ed25519-compact]
version  = "1.0.11"
features = []

[dependencies.hyper]
version  = "0.14.18"
features = ["client"]

[dependencies.hyper-rustls]
version  = "0.23.0"
features = ["http1", "http2"]

[dependencies.opentelemetry]
version  = "0.17.0"
features = ["rt-tokio"]

[dependencies.opentelemetry-otlp]
version  = "0.10.0"
features = ["http-proto", "reqwest-client", "reqwest-rustls"]
default-features = false

[dependencies.opentelemetry-semantic-conventions]
version  = "0.9.0"
features = []

[dependencies.rustls]
version  = "0.20.4"
features = ["dangerous_configuration"]

[dependencies.rustls-native-certs]
version  = "0.6.2"
features = []

[dependencies.serde]
version  = "1.0.137"
features = ["derive", "rc"]

[dependencies.tokio]
version  = "1.18.1"
features = ["macros", "net", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-util]
version  = "0.7.2"
features = ["codec"]

[dependencies.tracing]
version  = "0.1.34"
features = []

[dependencies.tracing-opentelemetry]
version  = "0.17.2"
features = []

[dependencies.tracing-subscriber]
version  = "0.3.11"
features = ["env-filter", "tracing-log"]

[dependencies.trust-dns-client]
version  = "0.21.2"
features = []
default-features = false

[dependencies.trust-dns-resolver]
version  = "0.21.2"
features = ["system-config", "tokio-runtime"]
default-features = false

[dependencies.x509-certificate]
version  = "0.13.0"
features = []

[dependencies.notary]
version  = "0.0.5"
features = ["client"]
default-features = false

[dependencies.synapi]
path = "synapi"

[dev-dependencies]
rcgen       = "0.9.2"
tokio-test  = "0.4.2"

[dev-dependencies.hyper]
version  = "0.14.18"
features = ["server"]

[dev-dependencies.rustls-pemfile]
version  = "1.0.0"
features = []

[build-dependencies]
capnpc = "0.14.7"
anyhow = "1.0.57"

[build-dependencies.git2]
version  = "0.14.3"
features = []
default-features = false

[profile.release]
debug = true

[profile.release.package."*"]
debug = false

[patch.crates-io.clap]
git   = "https://github.com/kentik/clap"
rev   = "040d70fec261e25d3fe6a8fea1a314d7ca66b388"
