[package]
name        = "netdiag"
version     = "0.0.2"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"

[dependencies]
anyhow      = "1.0.30"
etherparse  = "0.9.0"
futures     = "0.3.5"
libc        = "0.2.70"
rand        = "0.7.3"
raw-socket  = "0.0.1"

[dependencies.tokio]
version     = "0.2.21"
features    = ["net"]
default-features = false

[dev-dependencies]

[dev-dependencies.tokio]
version     = "0.2.21"
features    = ["full"]

