[package]
name        = "netdiag"
version     = "0.0.7"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"

[dependencies]
anyhow      = "1.0.33"
etherparse  = "0.9.0"
futures     = "0.3.6"
libc        = "0.2.79"
log         = "0.4.11"
parking_lot = "0.11.0"
rand        = "0.7.3"
raw-socket  = "0.0.1"

[dependencies.tokio]
version     = "0.2.22"
features    = ["net"]
default-features = false

[dev-dependencies]

[dev-dependencies.tokio]
version     = "0.2.22"
features    = ["full"]

