[package]
name        = "netdiag"
version     = "0.0.9"
edition     = "2018"

authors     = ["Will <will@kentik.com>"]
description = "Network diagnostics"

[dependencies]
anyhow      = "1.0.37"
etherparse  = "0.9.0"
futures     = "0.3.8"
libc        = "0.2.79"
log         = "0.4.11"
parking_lot = "0.11.0"
rand        = "0.8.1"
raw-socket  = "0.0.2"

[dependencies.tokio]
version     = "1.0.1"
features    = ["net"]
default-features = false

[dev-dependencies]
gumdrop     = "0.8.0"

[dev-dependencies.tokio]
version     = "1.0.1"
features    = ["full"]
