[package]
name    = "notary"
version = "0.0.2"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
anyhow          = "1.0.37"
ed25519-compact = "0.1.6"
hmac-sha512     = "0.1.6"
log             = "0.4.8"
nix             = "0.19.1"
serde_json      = "1.0.61"
tokio           = "1.0.1"
tokio-stream    = "0.1.1"
zstd            = "0.6.0"

[dependencies.bytes]
version  = "1.0.0"
features = ["serde"]

[dependencies.reqwest]
version  = "0.11.0"
features = ["gzip", "json", "rustls-tls", "stream"]
default-features = false

[dependencies.serde]
version  = "1.0.118"
features = ["derive"]

[profile.release]
debug = true
