[package]
name    = "synapi"
version = "0.0.9"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
hex           = "0.4.2"
log           = "0.4.11"
rand          = "0.8.1"
rustls        = "0.20.3"
serde_json    = "1.0.61"
time          = "0.1.42"

[dependencies.async-compression]
version  = "0.3.7"
features = ["futures-write", "gzip"]
default-features = false

[dependencies.ed25519-compact]
version  = "0.1.8"

[dependencies.futures]
version  = "0.3.6"
features = ["std"]
default-features = false

[dependencies.reqwest]
version  = "0.11.9"
features = ["gzip", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.118"
features = ["derive"]

[dependencies.tokio]
version  = "1.0.1"
features = ["sync"]

[dev-dependencies]
anyhow       = "1.0.37"
log          = "0.4.11"
env_logger   = "0.8.2"
webpki-roots = "0.21.0"

[dev-dependencies.tokio]
version  = "1.0.1"
features = ["full"]
