[package]
name    = "synapi"
version = "0.0.9"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
hex           = "0.4.3"
log           = "0.4.14"
rand          = "0.8.5"
rustls        = "0.20.4"
serde_json    = "1.0.79"
time          = "0.3.7"

[dependencies.async-compression]
version  = "0.3.12"
features = ["futures-write", "gzip"]
default-features = false

[dependencies.ed25519-compact]
version  = "1.0.11"
features = []

[dependencies.futures]
version  = "0.3.21"
features = ["std"]
default-features = false

[dependencies.reqwest]
version  = "0.11.9"
features = ["gzip", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version  = "1.17.0"
features = ["sync"]

[dev-dependencies]
anyhow       = "1.0.55"
log          = "0.4.14"
env_logger   = "0.9.0"
webpki-roots = "0.22.2"

[dev-dependencies.tokio]
version  = "1.17.0"
features = ["full"]
