[package]
name    = "synapi"
version = "0.0.9"
authors = ["Will <will@kentik.com>"]
edition = "2018"

[dependencies]
hex           = "0.4.3"
log           = "0.4.17"
rand          = "0.8.5"
rustls        = "0.20.6"
serde_json    = "1.0.85"
time          = "0.3.14"

[dependencies.async-compression]
version  = "0.3.14"
features = ["futures-write", "gzip"]
default-features = false

[dependencies.ed25519-compact]
version  = "1.0.11"
features = []

[dependencies.futures]
version  = "0.3.24"
features = ["std"]
default-features = false

[dependencies.reqwest]
version  = "0.11.11"
features = ["gzip", "json", "rustls-tls"]
default-features = false

[dependencies.serde]
version  = "1.0.144"
features = ["derive"]

[dependencies.tokio]
version  = "1.20.1"
features = ["sync"]

[dev-dependencies]
anyhow       = "1.0.63"
log          = "0.4.17"
env_logger   = "0.9.0"
webpki-roots = "0.22.4"

[dev-dependencies.tokio]
version  = "1.20.1"
features = ["full"]
